--- a/app/src/main/res/layout/activity_wrong_answer.xml
+++ b/app/src/main/res/layout/activity_wrong_answer.xml
@@ -5,16 +5,23 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    tools:context=".WrongAnswerActivity">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_layout"
+    android:padding="8dp"
+    tools:context=".Quiz.WrongAnswerActivity">
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/wronganswerlist" />
+            android:layout_height="match_parent">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rv_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/wronganswerlist" />
+
+        </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
