--- a/app/src/main/res/layout/activity_wrong_answer.xml
+++ b/app/src/main/res/layout/activity_wrong_answer.xml
@@ -5,8 +5,11 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="8dp"
+    android:paddingTop="16dp"
+    android:paddingHorizontal="8dp"
+    android:paddingBottom="16dp"
     tools:context=".Quiz.WrongAnswerActivity">
+
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -18,7 +21,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                    tools:listitem="@layout/wronganswerlist" />
+                    tools:listitem="@layout/wrong_answer_list" />
 
         </ScrollView>
 
